--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,12 @@ parse:
 sphinx:
   config:
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+# Information about where the book exists on the web
+repository:
+  url                       : https://github.com/fahadsultan/datascience_ml  # Online location of your book
+  # path_to_book              : path/to/book  # Optional path to your book, relative to the repository root
+  branch                    : main  # Which branch of the repository should be used when creating links (optional)
+
+launch_buttons:
+  colab_url: "https://colab.research.google.com"
