--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ repository:
 html:
   use_issues_button: false
   use_repository_button: false
+  google_analytics_id: G-FHTXXD4572
 
 parse:
   myst_enable_extensions:
