--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ parse:
     # including those that are enabled by default! See here: https://jupyterbook.org/en/stable/customize/config.html
     - html_image
     - amsmath
+    - dollarmath
 
 sphinx:
   config:
