--- a/_toc.yml
+++ b/_toc.yml
@@ -39,17 +39,15 @@ parts:
         # - file: 1_programming/13_notes
         # - file: 1_programming/14_exercises
     - file: 1_programming/40_modalities
+      sections: 
+        - file: 1_programming/41_types
+        - file: 1_programming/42_formats
+        - file: 1_programming/43_modalities
     - file: 1_programming/30_collecting
       # sections: 
       #   - file: 1_programming/31_apis
       #   - file: 1_programming/32_scraping
       #   - file: 1_programming/33_notes
-      # sections: 
-      #   - file: 1_programming/41_text
-      #   - file: 1_programming/42_graphs
-      #   - file: 1_programming/43_imgs
-      #   - file: 1_programming/44_audio
-      #   - file: 1_programming/45_notes
     - file: 1_programming/20_visualization
       # sections: 
       #   - file: 1_programming/21_univariate
