Before Lec on Sep7

--- a/_toc.yml
+++ b/_toc.yml
@@ -41,8 +41,8 @@ parts:
     - file: 1_programming/40_modalities
       sections: 
         - file: 1_programming/41_types
-        - file: 1_programming/42_formats
-        - file: 1_programming/43_modalities
+        # - file: 1_programming/42_formats
+        # - file: 1_programming/43_modalities
     - file: 1_programming/30_collecting
       # sections: 
       #   - file: 1_programming/31_apis
