--- a/_toc.yml
+++ b/_toc.yml
@@ -42,7 +42,7 @@ parts:
       sections: 
         - file: 1_programming/41_types
         # - file: 1_programming/42_formats
-        # - file: 1_programming/43_modalities
+        - file: 1_programming/43_modalities
     # - file: 1_programming/30_collecting
       # sections: 
       #   - file: 1_programming/31_apis
