--- a/_toc.yml
+++ b/_toc.yml
@@ -49,9 +49,10 @@ parts:
       #   - file: 1_programming/32_scraping
       #   - file: 1_programming/33_notes
     - file: 1_programming/20_visualization
-      # sections: 
-      #   - file: 1_programming/21_univariate
-      #   - file: 1_programming/22_multivariate
+      sections: 
+        - file: 1_programming/21_univariate
+        - file: 1_programming/22_multivariate
+        - file: 1_programming/23_multipanel
       #   - file: 1_programming/23_notes
   - caption: Mathematics for Data Science
     numbered: true
